[package]
name = "erc20"
version = "0.1.0"
authors = ["Rodolfo Araujo <rodoufu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
web3 = "0.13"
